--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,12 +3,7 @@
 {% block title %}scraping des données{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
     <h1>récupération des données</h1>
 
     <h3>
@@ -19,11 +14,22 @@
     {% endif %}
     </h3>
 
-    {% for row in newData %}
-        {% for eachRow in row %}
-            <p>{{ eachRow }}</p>
+    <table>
+        <tr>
+            <th scope="col">Date</th>
+            <th scope="col">clôture</th>
+            <th scope="col">ouverture</th>
+            <th scope="col">plus haut</th>
+            <th scope="col">plus bas</th>
+        </tr>
+        {% for row in data %}
+            <tr>
+            {% for eachRow in row %}
+                <td>{{ eachRow }}</td>
+            {% endfor %}
+            </tr>
         {% endfor %}
-    {% endfor %}
+    </table>
 
 </div>
 {% endblock %}
