ajout de bootstrap via CDN dans le template de base

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,9 +3,13 @@
 {% block title %}scraping des données{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container ">
 
     <h1>récupération des données End Of Day</h1>
+
+    <div class="alert alert-primary" role="alert">
+    Test de l'intégration de Bootstrap
+    </div>
 
     <h3>
     {% if lastDate is not null %}
