--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,34 @@
+@import '~bootstrap/scss/bootstrap';
+
 body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
     background-color: lightgray;
 }
 
-@import '~bootstrap/scss/bootstrap';
+table {
+    margin: auto;
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-size: .8rem;
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 10px;
+}
+
+td {
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #eee;
+}
+
+th[scope="col"] {
+    background-color: #696969;
+    color: #fff;
+}
