--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,8 @@
         {% endblock %}
     </head>
     <body>
+        {% include 'header.html.twig' %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
