--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,3 +5,14 @@ body {
     background-color: #fff;
     font-family: 'Roboto', sans-serif;
 }
+
+.underlying-shape {
+    position: absolute;
+    top: 70%;
+    left: -70px;
+    z-index: -1;
+    width: 25%;
+    height: 50%;
+    background-color: #bedafd;
+    border-radius: 50px;
+}
