--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,22 +1,14 @@
-<nav class="px-4 mb-4 shadow navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Webtrader</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav justify-content-center">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Disabled</a>
-            </li>
-        </ul>
+<!-- Responsive navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container px-lg-5">
+        <a class="navbar-brand" href="{{ path("app_home") }}">Webtrader</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path("app_home") }}">Accueil</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
