fix: le changement de la méthode findBy() pour findOneBy() comportait des erreurs qui sont maintenant corrigées

--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -30,7 +30,7 @@
                             <th scope="col" class="text-center">plus bas</th>
                         </tr>
                         </thead>
-                        {% for row in displayData %}
+                        {% for row in cac %}
                             <tr>
                                 <td class="text-center">{{ row.createdAt|date("d/m/Y") }}</td>
                                 <td class="text-center">{{ row.closing }}</td>
