--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,7 +9,7 @@
             <div class="p-4 p-lg-5 bg-light rounded-3 text-center position-relative">
                 <div class="m-4 m-lg-5">
                     <h1 class="display-5 fw-bold">Bienvenue !</h1>
-                    <p class="fs-4">Simplifiez le suivi de vos investissements avec notre dashboard intégré. Suivez d'un coup d'oeil l'état de vos positions ouvertes, en attente ou vendues. Définissez vos niveaux d'intrevention sur le marché. Prémunissez-vous contre les achats au plus haut en achetant sur les replis significatifs.</p>
+                    <p class="fs-4">Simplifiez le suivi de vos investissements avec notre dashboard intégré. Suivez d'un coup d'oeil l'état de vos positions ouvertes, en attente ou vendues. Définissez vos niveaux d'intervention sur le marché. Prémunissez-vous contre les achats au plus haut en achetant uniquement sur des replis significatifs.</p>
                     <a class="btn btn-primary btn-lg" href="{{ path("app_dashboard") }}">voir le dashboard</a>
                 </div>
                 <div class="p-4 p-lg-5 underlying-shape text-center"></div>
