ajout de styles pour le formulaire de connexion + ajout d'un gradient sur la page d'accueil

--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -3,10 +3,10 @@
 {% block title %}scraping des données{% endblock %}
 
 {% block body %}
+    {# TODO : inspiration pour les cards à ajouter : https://codepen.io/JavaScriptJunkie/pen/WgRBxw #}
     <div class="container ">
 
         <h1 class="row justify-content-center">récupération des données End Of Day</h1>
-
 
         <h3 class="row justify-content-center mb-4">
             {% if lastDate is not null %}
