--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 
     <header class="py-5">
         <div class="container px-lg-5">
-            <div class="p-4 p-lg-5 bg-light rounded-3 text-center position-relative">
+            <div class="p-4 p-lg-5 custom-card text-center position-relative">
                 <div class="m-4 m-lg-5">
                     <h1 class="display-5 fw-bold">Bienvenue !</h1>
                     <p class="fs-4">Simplifiez le suivi de vos investissements avec notre dashboard intégré. Suivez d'un coup d'oeil l'état de vos positions ouvertes, en attente ou vendues. Définissez vos niveaux d'intervention sur le marché. Prémunissez-vous contre les achats au plus haut en achetant uniquement sur des replis significatifs.</p>
