--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,9 +9,17 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.custom-login-form {
+    background: linear-gradient(45deg, rgba(43,119,158,1) 0%, rgba(65,181,237,1) 90%, rgba(65,181,237,1) 100%);
+    border-radius: 10px;
+    color: white;
+    margin-top: 10%;
+    box-shadow: 0 5px 10px rgb(154, 160, 185), 0 15px 40px rgb(166, 173, 201);
+}
+
 .underlying-shape {
     position: absolute;
-    top: 70%;
+    top: 60%;
     left: -10em;
     z-index: -1;
     width: 25%;
@@ -28,4 +36,12 @@ body {
     height: 4rem;
     width: 4rem;
     font-size: 2rem;
+}
+
+// Custom gradient for background's homepage card
+.custom-card {
+    background: linear-gradient(-71deg,#15c39a,#19bea0 6%,#19bea0 7%,#4a6ee0 95%);
+    border-radius: 10px;
+    color: white;
+    /* background-image: linear-gradient(-71deg, rgb(21, 195, 154), rgb(25, 190, 160) 6%, rgb(25, 190, 160) 7%, rgb(74, 110, 224) 95%); */
 }
