--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,5 +1,5 @@
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
     <div class="container px-lg-5">
         <a class="navbar-brand" href="{{ path("app_home") }}">Webtrader</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -8,6 +8,11 @@
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path("app_home") }}">Accueil</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                {% if app.user %}
+                    <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_logout") }}">Se déconnecter</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_login") }}">Se connecter</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
