--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,6 +17,22 @@ body {
     box-shadow: 0 5px 10px rgb(154, 160, 185), 0 15px 40px rgb(166, 173, 201);
 }
 
+.custom-btn {
+    box-sizing: content-box;
+    color: white;
+    background-color: #0c7ef0;
+    border: 0 solid deepskyblue;
+    transition: box-shadow .2s ease, border .2s ease, background-color .2s ease, color .2s ease;
+    box-shadow: inset 0 0 0 0 rgba(43,119,158,1), inset 0 0 0 2px deepskyblue, 0 0 0 0 rgba(43,119,158,1);
+}
+
+.custom-btn:hover {
+    box-shadow: inset 0 0 0 4px rgba(43,119,158,1), inset 0 0 0 6px deepskyblue, 0 0 0 0 rgba(43,119,158,1);
+    background-color: #0d6efd;
+    color: white;
+    border-radius: 5px;
+}
+
 .underlying-shape {
     position: absolute;
     top: 60%;
