--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -11,7 +11,7 @@
                 {% if app.user %}
                     <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_logout") }}">Se déconnecter</a></li>
                 {% else %}
-                    <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_login") }}">Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle p-2"></i>Se connecter</a></li>
                 {% endif %}
             </ul>
         </div>
