--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
             </div>
             #}
 
-            <button class="btn btn-lg btn-primary mt-3" type="submit">
+            <button class="btn btn-lg mt-3 custom-btn" type="submit">
                 Valider
             </button>
         </form>
