ajout d'un favicon personnalisé : WB

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -61,3 +61,7 @@ body {
     color: white;
     /* background-image: linear-gradient(-71deg, rgb(21, 195, 154), rgb(25, 190, 160) 6%, rgb(25, 190, 160) 7%, rgb(74, 110, 224) 95%); */
 }
+
+.custom-card--mini {
+    background-color: #D1ECFA;
+}
