--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}scraping des données{% endblock %}
+{% block title %}dashboard{% endblock %}
 
 {% block body %}
     {# TODO : inspiration pour les cards à ajouter : https://codepen.io/JavaScriptJunkie/pen/WgRBxw #}
