--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Application pour mettre à jour les cours de CAC et surveiller les niveaux d'achat sur retracement">
         <meta name="author" content="Mickaël BULA">
+        <meta name="keyword" content="trading, bourse, investissement, retracement">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        {# ajout des favicon #}
+        <link rel="apple-touch-icon" sizes="180x180" href={{ asset("assets/images/favicon/apple-touch-icon.png") }}>
+        <link rel="icon" type="image/png" sizes="32x32" href={{ asset("assets/images/favicon/favicon-32x32.png") }}>
+        <link rel="icon" type="image/png" sizes="16x16" href={{ asset("assets/images/favicon/favicon-16x16.png") }}>
+        <link rel="manifest" href={{ asset("assets/images/favicon/site.webmanifest") }}>
+        {# la ligne suivante est le favicon par défaut de Symfony #}
+        {# <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> #}
+        {# ajout des favicon #}
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
@@ -25,5 +33,7 @@
         {% include 'header.html.twig' %}
 
         {% block body %}{% endblock %}
+
+        {% include 'footer.html.twig' %}
     </body>
 </html>
