--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -56,12 +56,20 @@ body {
 
 // Custom gradient for background's homepage card
 .custom-card {
-    background: linear-gradient(-71deg,#15c39a,#19bea0 6%,#19bea0 7%,#4a6ee0 95%);
+    background-image: linear-gradient(-71deg, rgb(21, 195, 154), rgb(74, 110, 224) 95%);
     border-radius: 10px;
     color: white;
-    /* background-image: linear-gradient(-71deg, rgb(21, 195, 154), rgb(25, 190, 160) 6%, rgb(25, 190, 160) 7%, rgb(74, 110, 224) 95%); */
 }
 
 .custom-card--mini {
     background-color: #D1ECFA;
+}
+
+.custom-table {
+    /* Created with https://www.css-gradient.com */
+    background: rgba(223, 239, 241, 1.0);
+    background: -webkit-linear-gradient(top left, rgba(223, 239, 241, 1.0), rgba(135, 230, 239, 1.0));
+    background: -moz-linear-gradient(top left, rgba(223, 239, 241, 1.0), rgba(135, 230, 239, 1.0));
+    background: linear-gradient(to bottom right, rgba(223, 239, 241, 1.0), rgba(135, 230, 239, 1.0));
+    border-radius: 10px;
 }
