--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,4 @@
 <!-- Footer-->
-<footer class="py-5 bg-primary bg-gradient">
+<footer class="py-5 bg-primary bg-gradient mt-auto">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Mickaël Bula 2022</p></div>
 </footer>
