--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -18,9 +18,9 @@
         </h3>
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 p-3 custom-table">
                     {# le tableau n'apparaît pas pour la largeur small, display-table pour les autres #}
-                    <table class="table table-striped table-hover table-bordered d-none d-sm-table">
+                    <table class="table table-hover d-none d-sm-table">
                         <thead>
                         <tr>
                             <th scope="col" class="text-center">Date</th>
