--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
                     <p class="fs-4">Simplifiez le suivi de vos investissements avec notre dashboard intégré. Suivez d'un coup d'oeil l'état de vos positions ouvertes, en attente ou vendues. Définissez vos niveaux d'intervention sur le marché. Prémunissez-vous contre les achats au plus haut en achetant uniquement sur des replis significatifs.</p>
                     <a class="btn btn-primary btn-lg" href="{{ path("app_dashboard") }}">voir le dashboard</a>
                 </div>
-                <div class="p-4 p-lg-5 underlying-shape text-center"></div>
+                <div class="p-4 p-lg-5 d-none d-md-block underlying-shape text-center"></div>
             </div>
         </div>
     </header>
