--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -9,9 +9,9 @@
                 <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 {% if app.user %}
-                    <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_logout") }}">Se déconnecter</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_logout") }}"><i class="bi bi-person-circle pe-2 p-lg-2"></i>Se déconnecter</a></li>
                 {% else %}
-                    <li class="nav-item"><a class="nav-link px-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle p-2"></i>Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2"></i>Se connecter</a></li>
                 {% endif %}
             </ul>
         </div>
