intégration du premier widget des positions en attente, sur la même ligne que le tableau des données du cac

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,7 @@ $enable-responsive-font-sizes: true;
 
 @import '~bootstrap/scss/bootstrap';
 @import 'table.scss';
+@import 'custom-cards';
 
 body {
     margin: 0;
