réduction de la taille des cards + changement de couleur du tableau + nouveau bg-color du body

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,7 +8,7 @@ $enable-responsive-font-sizes: true;
 
 body {
     margin: 0;
-    background-color: #fff;
+    background-color: #EDEEF1;
     font-family: 'Roboto', sans-serif;
 }
 
