--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -40,7 +40,7 @@
                     <div class="col my-container">
                         <div class="circle circle--orange circle-shadow"></div>
                         <div id="orange" class="my-card">
-                            <div class="h4">Positions en attente</div>
+                            <div class="h5">Positions en attente</div>
                             <div class="my-card-positions">
                                 <div>22/06/2022 +23 LVC @ 23.16 CAC=6100</div>
                                 <div>22/06/2022 +23 LVC @ 23.16 CAC=6100</div>
@@ -54,7 +54,7 @@
                     <div class="col my-container">
                         <div class="circle circle--red circle-shadow"></div>
                         <div id="red" class="my-card">
-                            <div class="h4">Positions en cours</div>
+                            <div class="h5">Positions en cours</div>
                             <div class="my-card-positions">
                                 <div>22/06/2022 +23 LVC @ 23.16 CAC=6100</div>
                                 <div>22/06/2022 +23 LVC @ 23.16 CAC=6100</div>
@@ -69,7 +69,7 @@
                 <div class="col my-container">
                     <div class="circle circle--green circle-shadow"></div>
                     <div id="green" class="my-card">
-                        <div class="h4">Positions en cours</div>
+                        <div class="h5">Positions en cours</div>
                         <div class="my-card-positions">
                             <div>22/06/2022 +23 LVC @ 23.16 CAC=6100</div>
                             <div>22/06/2022 +23 LVC @ 23.16 CAC=6100</div>
@@ -81,8 +81,7 @@
             </div>
         </div>
 
-        </div>
-
+        {# 3ème ligne à supprimer en l'intégrant dans les cards positions #}
         <div class="row">
             {% for position in positions %}
             <p>
